# StoryJupyter

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-jupyter.txt
.github/workflows/: ci.yml
examples/: character_tuning.ipynb  example.ipynb  persistence_example.ipynb
examples/persistence/: persistence_example1.ipynb  persistence_example2.ipynb
raw_story/: 1_HG.md  LICENSE.md
src/storyjupyter/: __init__.py  builder.py  story.py
src/storyjupyter/domain/: __init__.py  exceptions.py  interfaces.py  models.py  time.py
src/storyjupyter/generation/: __init__.py  faker.py  llm.py
src/storyjupyter/persistence/: __init__.py  dummy.py  mongodb.py
storyjupyter/: __init__.py  context.py  story.py
storyjupyter/core/: __init__.py  llm.py  models.py  pronouns.py  protocols.py  types.py
storyjupyter/persistence/: __init__.py  repositories.py  schema.py
storyjupyter/services/: __init__.py  brand.py  character.py  markdown.py  narrative.py  timeline.py
tests/: conftest.py  test_builder.py  test_generation.py  test_models.py  test_persistence.py  test_story.py
