[project]
name = "storyjupyter"
version = "0.1.0"
description = "A Python library for maintaining narrative consistency in long-form writing"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pydantic>=2.5.0",
    "faker>=19.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "python-slugify>=8.0.0",
    "typing-extensions>=4.8.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}